Changed the css

--- a/MCQ/MCQ.html
+++ b/MCQ/MCQ.html
@@ -3,8 +3,56 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="MCQ.css">
 </head>
-<body>
-    <h1>CSS MCQ Quiz for Students</h1>
+<body style="background-color: rgb(222, 222, 222)">
+<div id="b">
+    <h1 id="a">CSS MCQ Quiz for Students</h1>
+    <p>Learn Inline, Internal, External CSS + Box Model + Positions</p>
+</div>
+<div id="c">
+    <h1>Multiple Choice Questions</h1>
+    <div class="q">
+        <h4 for="q1">1. Which CSS type is written inside the HTML tags?</h4>
+        <input type="radio" name="q1"> Internal CSS<br>
+        <input type="radio" name="q1"> External CSS<br>
+        <input type="radio" name="q1"> Inline CSS<br>
+        <input type="radio" name="q1"> None<br>
+    </div>
+    <div class="q">
+        <h4 for="q2">2. Which tag is used to write Internal CSS?</h4>
+        <input type="radio" name="q2"> &lthead&gt<br>
+        <input type="radio" name="q2"> &ltstyle&gt<br>
+        <input type="radio" name="q2"> &ltscript&gt<br>
+        <input type="radio" name="q2"> &ltcss&gt<br>
+    </div>
+    <div class="q">
+        <h4 for="q3">1. External CSS is added using?</h4>
+        <input type="radio" name="q3"> &ltscript&gt<br>
+        <input type="radio" name="q3"> &ltlink&gt<br>
+        <input type="radio" name="q3"> &ltmeta&gt<br>
+        <input type="radio" name="q3"> &ltimport&gt<br>
+    </div>
+    <h1>CSS Box Model Example</h1>
+    <div class="z">
+        <p>Content Area</p>
+        <p>(Padding + Margin + Border)</p>
+    </div>
+    <div class="q">
+        <h4 for="q4">4. Which is not part of the CSS Box Model?</h4>
+        <input type="radio" name="q4"> Margin<br>
+        <input type="radio" name="q4"> Padding<br>
+        <input type="radio" name="q4"> Border<br>
+        <input type="radio" name="q4"> Font-size<br>
+    </div>
+    <div class="q">
+        <h4 for="q5">5. Which position keeps the element fixed on screen?</h4>
+        <input type="radio" name="q5"> Realtive<br>
+        <input type="radio" name="q5"> Absolute<br>
+        <input type="radio" name="q5"> Fixed<br>
+        <input type="radio" name="q5"> Padding<br>
+    </div>
+</div>
+<h6 id="fixed">Position: Fixed</h6>
 </body>
 </html>
