Continuing to work with FlexBox

--- a/HTML/Flex-Box/flexbox.html
+++ b/HTML/Flex-Box/flexbox.html
@@ -85,17 +85,17 @@
         <hr>
         <p>Contains the order in which items appear (visually)</p>
         <div class="flexContainer10">
-            <div class="default">Default</div>
-            <div class="order1">Order 1</div>
-            <div class="order2">Order 2</div>
+            <div class="order">Default</div>
+            <div class="order">Order 1</div>
+            <div class="order">Order 2</div>
         </div>
         <h3>11. Align self</h3>
         <hr>
         <p>Overrides align-items for individual items.</p>
         <div class="flexContainer11">
-            <div class="top">top</div>
-            <div class="center">center</div>
-            <div class="bottom">bottom</div>
+            <div class="alignself">top</div>
+            <div class="alignself">center</div>
+            <div class="alignself">bottom</div>
         </div>
     </body>
 </html>
