--- a/HTML/js/dom/dom.html
+++ b/HTML/js/dom/dom.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Title</title>
-        <style>
+<!--        <style>
             .border{
                 border: 2px solid red;
             }
@@ -15,14 +15,30 @@
             .background{
                 background-color: yellow;
             }
+        </style>-->
+        <style>
+            body{
+                height: 100px;
+                display: flex;
+                padding-top: 20px;
+                justify-content: center;
+                background-color: lightcyan;
+            }
+
+
         </style>
         <script src="dom.js" defer></script>
     </head>
     <body>
-        <h1>DOM Manipulation</h1>
+        <!--<h1>DOM Manipulation</h1>
         <h1 class="a">Hello World</h1>
         <p class="a">Hello from para</p>
         <span id="b">Span</span>
-        <p id="b">Para</p>
+        <p id="b">Para</p>-->
+        <form id="as">
+            <input type="text" placeholder="name"/>
+            <input type="text" placeholder="feedback"/>
+            <button type="submit">Submit</button>
+        </form>
     </body>
 </html>
